chore: update inventory

--- a/inventory.ini
+++ b/inventory.ini
@@ -19,9 +19,9 @@ bt-beg-int_dc1-beg ansible_host=2a07:1182:6:1::2 os=windows_server_2022 fqdn=dc1
 bt-baf-int_dc2-baf ansible_host=2a07:1182:6:1001::3 os=windows_server_2022 fqdn=dc2.int.baf.06.berylia.org ansible_password=Ilovekobe24! # bt_baf_int
 bt-beg-int_dc2-beg ansible_host=2a07:1182:6:1::3 os=windows_server_2022 fqdn=dc2.int.beg.06.berylia.org ansible_password=GeniusShot7 # bt_beg_int
 bt-bob-dmz_ems-bob ansible_host=2a07:1182:6:2000::10 os=windows_server_2022 fqdn=ems.bob.06.berylia.org ansible_password=0UR&sRRTd78t ansible_user=james # bt_bob_dmz
-bt-baf-int_files-baf ansible_host=2a07:1182:6:1001::4 os=windows_server_2022 fqdn=files.int.baf.06.berylia.org ansible_password=RollGras8 # bt_baf_int
+bt-baf-int_files-baf ansible_host=2a07:1182:6:1001::4 os=windows_server_2022 fqdn=files.int.baf.06.berylia.org ansible_password=M!n@t0222 # bt_baf_int
 bt-beg-dmz_mail-beg ansible_host=2a07:1182:6::5 os=windows_server_2022 fqdn=mail.beg.06.berylia.org ansible_password=SenderDaily1 # bt_beg_dmz
-bt-baf-int_mail-baf ansible_host=2a07:1182:6:1001::5 os=windows_server_2022 fqdn=mail.int.baf.06.berylia.org ansible_password=DeathStroke2 # bt_baf_int
+bt-baf-int_mail-baf ansible_host=2a07:1182:6:1001::5 os=windows_server_2022 fqdn=mail.int.baf.06.berylia.org ansible_password=kUsh!n@456 # bt_baf_int
 bt-baf-int_sp-baf ansible_host=2a07:1182:6:1001::6 os=windows_server_2022 fqdn=sp.int.baf.06.berylia.org ansible_password=Connect@son3 # bt_baf_int
 bt-baf-int_sql-baf ansible_host=10.6.8.7 os=windows_server_2022 fqdn=sql.int.baf.06.berylia.org ansible_password=R3spond+oprotect # bt_baf_int
 bt-beg-conf_srv01-beg-conf ansible_host=2a07:1182:6:6::6 os=windows_server_2022 fqdn=srv01-beg-conf.confidential.beg.06.berylia.org ansible_password=PowellBill6 # bt_beg_conf
@@ -31,9 +31,9 @@ bt-baf-int_wsus-baf ansible_host=2a07:1182:6:1001::8 os=windows_server_2022 fqdn
 [windows_client]
 bt-beg-gas_gas-hmi ansible_host=2a07:1182:6:24::111 os=windows_11_21h2 fqdn=gas-hmi.gas.beg.06.berylia.org ansible_password=LikelyDisc6 # bt_beg_gas
 bt-beg-gas_gas-maintenance-terminal ansible_host=2a07:1182:6:24::150 os=windows_11_21h2 fqdn=gas-maintenance-terminal.gas.beg.06.berylia.org ansible_password=NearlyUpper5 # bt_beg_gas
-bt-bob-int_rms-rdp ansible_host=2a07:1182:6:2001::11 os=windows_10_21h1 fqdn=rms-rdp.int.bob.06.berylia.org ansible_password=ViewsLeon8 # bt_bob_int
+bt-bob-int_rms-rdp ansible_host=2a07:1182:6:2001::11 os=windows_10_21h1 fqdn=rms-rdp.int.bob.06.berylia.org ansible_password=Fiji_Cube10 # bt_bob_int
 bt-beg-conf_ws01-beg-conf ansible_host=2a07:1182:6:6::4 os=windows_10_1903 fqdn=ws01-beg-conf.confidential.beg.06.berylia.org ansible_password=WeirdRussia7 # bt_beg_conf
-bt-baf-int_ws1-baf_01 ansible_host=2a07:1182:6:1001::31 os=windows_10_21h1 fqdn=ws1-baf01.int.baf.06.berylia.org ansible_password=CorpusClips1 # bt_baf_int
+bt-baf-int_ws1-baf_01 ansible_host=2a07:1182:6:1001::31 os=windows_10_21h1 fqdn=ws1-baf01.int.baf.06.berylia.org ansible_password=0roch1M@ru # bt_baf_int
 bt-baf-int_ws1-baf_02 ansible_host=2a07:1182:6:1001::32 os=windows_10_21h1 fqdn=ws1-baf02.int.baf.06.berylia.org ansible_password=CageSigma2 # bt_baf_int
 bt-baf-int_ws1-baf_03 ansible_host=2a07:1182:6:1001::33 os=windows_10_21h1 fqdn=ws1-baf03.int.baf.06.berylia.org ansible_password=CR7!ronaldo # bt_baf_int
 bt-baf-int_ws1-baf_04 ansible_host=2a07:1182:6:1001::34 os=windows_10_21h1 fqdn=ws1-baf04.int.baf.06.berylia.org ansible_password=Me$$1goat # bt_baf_int
@@ -81,11 +81,11 @@ bt-baf-5g-core_5g-nrf ansible_host=2a07:1182:6:1002::20 os=ubuntu_22_04 fqdn=5g-
 bt-baf-5g-core_5g-nssf ansible_host=2a07:1182:6:1002::23 os=ubuntu_22_04 fqdn=5g-nssf.sac.baf.06.berylia.org ansible_password=JoinHotel3 # bt_baf_5g_core
 bt-baf-5g-core_5g-pcf ansible_host=2a07:1182:6:1002::27 os=ubuntu_22_04 fqdn=5g-pcf.sac.baf.06.berylia.org ansible_password=JohnGoal8 # bt_baf_5g_core
 bt-baf-5g-core_5g-smf ansible_host=2a07:1182:6:1002::26 os=ubuntu_22_04 fqdn=5g-smf.sac.baf.06.berylia.org ansible_password=PrintCalif8 # bt_baf_5g_core
-bt-baf-5g-core_5g-udm ansible_host=2a07:1182:6:1002::22 os=ubuntu_22_04 fqdn=5g-udm.sac.baf.06.berylia.org ansible_password=GossipDear8 # bt_baf_5g_core
-bt-baf-5g-core_5g-udr ansible_host=2a07:1182:6:1002::21 os=ubuntu_22_04 fqdn=5g-udr.sac.baf.06.berylia.org ansible_password=BaileyTrail8 # bt_baf_5g_core
+bt-baf-5g-core_5g-udm ansible_host=2a07:1182:6:1002::22 os=ubuntu_22_04 fqdn=5g-udm.sac.baf.06.berylia.org ansible_password=MonsterPaul8 # bt_baf_5g_core
+bt-baf-5g-core_5g-udr ansible_host=2a07:1182:6:1002::21 os=ubuntu_22_04 fqdn=5g-udr.sac.baf.06.berylia.org ansible_password=GenGar123 # bt_baf_5g_core
 bt-baf-dmz_5g-upf-baf ansible_host=2a07:1182:6:1000::80 os=ubuntu_22_04 fqdn=5g-upf-baf.baf.06.berylia.org ansible_password=ServeEaster3 # bt_baf_dmz
 bt-baf-5g-core_5g-upf-core ansible_host=2a07:1182:6:1002::110 os=ubuntu_22_04 fqdn=5g-upf-core.sac.baf.06.berylia.org ansible_password=CapsPlace1 # bt_baf_5g_core
-bt-baf-5g-core_5g-webui ansible_host=2a07:1182:6:1002::100 os=ubuntu_22_04 fqdn=5g-webui.sac.baf.06.berylia.org ansible_password=EnableCast9 # bt_baf_5g_core
+bt-baf-5g-core_5g-webui ansible_host=2a07:1182:6:1002::100 os=ubuntu_22_04 fqdn=5g-webui.sac.baf.06.berylia.org ansible_password=PikaChu69 # bt_baf_5g_core
 bt-bob-rms_app-ng ansible_host=2a07:1182:6:2002::100 os=ubuntu_22_04 fqdn=app-ng.bob.06.berylia.org ansible_password=Ieee_Chevy6 # bt_bob_rms
 bt-mon_arkime ansible_host=10.6.59.22 os=ubuntu_22_04 fqdn=arkime.06.berylia.org ansible_password=PurpleHeight4 # bt_mon
 bt-bob-rms_auth-ng ansible_host=2a07:1182:6:2002::103 os=ubuntu_22_04 fqdn=auth-ng.bob.06.berylia.org ansible_password=Took_Cube6 # bt_bob_rms
@@ -128,7 +128,7 @@ bt-beg-dmz_maintenance ansible_host=2a07:1182:6::80 os=ubuntu_22_04 fqdn=mainten
 bt-baf-ads_map-ads ansible_host=2a07:1182:6:1004::34 os=almalinux8 fqdn=map-ads.baf.06.berylia.org ansible_password=CircusSmell3 # bt_baf_ads
 bt-baf-int_mcs ansible_host=2a07:1182:6:1001::50 os=ubuntu_22_04 fqdn=mcs.int.baf.06.berylia.org ansible_password=WivesPunch4 # bt_baf_int
 bt-bob-rms_mp-exchange-ng ansible_host=2a07:1182:6:2002::102 os=ubuntu_22_04 fqdn=mp-exchange-ng.bob.06.berylia.org ansible_password=Toll_Cheats6 # bt_bob_rms
-bt-bob-rms_mp-match-ng ansible_host=2a07:1182:6:2002::104 os=ubuntu_22_04 fqdn=mp-match-ng.bob.06.berylia.org ansible_password=Fiji_Anime4 # bt_bob_rms
+bt-bob-rms_mp-match-ng ansible_host=2a07:1182:6:2002::104 os=ubuntu_22_04 fqdn=mp-match-ng.bob.06.berylia.org ansible_password=Toll_Cheats6 # bt_bob_rms
 bt-baf-dmz_ns1-baf ansible_host=2a07:1182:6:1000::2 os=debian_11 fqdn=ns1.baf.06.berylia.org ansible_password=TrainPasta1 # bt_baf_dmz
 bt-beg-dmz_ns1-beg ansible_host=2a07:1182:6::2 os=debian_11 fqdn=ns1.beg.06.berylia.org ansible_password=WidelyLord3 # bt_beg_dmz
 bt-baf-dmz_ns2-baf ansible_host=2a07:1182:6:1000::3 os=debian_11 fqdn=ns2.baf.06.berylia.org ansible_password=PixelsTrains4 # bt_baf_dmz
@@ -138,7 +138,7 @@ bt-beg-conf_pcap-beg-conf ansible_host=2a07:1182:6:6::10 os=ubuntu_22_04 fqdn=pc
 bt-beg-dmz_prices ansible_host=None os=docker_service fqdn=prices.beg.06.berylia.org # bt_beg_dmz
 bt-baf-dmz_recruitment ansible_host=2a07:1182:6:1000::61 os=ubuntu_20_04 fqdn=recruitment.baf.06.berylia.org # bt_baf_dmz
 bt-baf-int_reports ansible_host=2a07:1182:6:1001::12 os=ubuntu_20_04 fqdn=reports.int.baf.06.berylia.org # bt_baf_int
-bt-bob-rms_rms-ng ansible_host=2a07:1182:6:2002::17 os=ubuntu_22_04 fqdn=rms-ng.bob.06.berylia.org ansible_password=Human_Invest9 # bt_bob_rms
+bt-bob-rms_rms-ng ansible_host=2a07:1182:6:2002::17 os=ubuntu_22_04 fqdn=rms-ng.bob.06.berylia.org ansible_password=f*88S%7C # bt_bob_rms
 bt-beg-dmz_salt-master ansible_host=100.96.6.37 os=ubuntu_22_04 fqdn=salt-master.beg.06.berylia.org ansible_password=LeagueTiger3 # bt_beg_dmz
 bt-baf-dmz_search ansible_host=2a07:1182:6:1000::20 os=debian_11 fqdn=search.baf.06.berylia.org # bt_baf_dmz
 bt-baf-dmz_service-portal ansible_host=2a07:1182:6:1000::16 os=ubuntu_20_04 fqdn=service-portal.baf.06.berylia.org # bt_baf_dmz
